// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`claimScopes should return a list of scopes for given identity 1`] = `
Object {
  "claimScopes": Object {
    "__typename": "ClaimScopesConnection",
    "nodes": Array [
      Object {
        "__typename": "ClaimScope",
        "scope": Object {
          "type": "Identity",
          "value": "0x56a91c10f2368b30670b7bea260928f0291387abfb75b5953cd722917423bf01",
        },
        "ticker": null,
      },
      Object {
        "__typename": "ClaimScope",
        "scope": Object {
          "type": "Ticker",
          "value": "5TICKER",
        },
        "ticker": "5TICKER",
      },
    ],
  },
}
`;

exports[`claims should return all claims as there are no filters 1`] = `
Object {
  "claims": Object {
    "__typename": "ClaimsConnection",
    "nodes": Array [
      Object {
        "__typename": "Claim",
        "cddId": "0x0000000000000000000000000000000000000000000000000000000000000001",
        "expiry": null,
        "filterExpiry": "253402194600000",
        "issuanceDate": "1633523581000",
        "issuerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "jurisdiction": null,
        "lastUpdateDate": "1633523581000",
        "scope": null,
        "targetDidId": "0xd066bfeefcb60c5a33bfa79d4466ad016a12e80fa0149b85f95884ed4327071e",
        "type": "CustomerDueDiligence",
      },
      Object {
        "__typename": "Claim",
        "cddId": "0x0000000000000000000000000000000000000000000000000000000000000002",
        "expiry": null,
        "filterExpiry": "253402194600000",
        "issuanceDate": "1633523581500",
        "issuerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "jurisdiction": null,
        "lastUpdateDate": "1633523581500",
        "scope": null,
        "targetDidId": "0x6f6e1b8b1554b91f186a5040bad955e00b526e7d27dab20c0f4f4fdedd94cd0b",
        "type": "CustomerDueDiligence",
      },
      Object {
        "__typename": "Claim",
        "cddId": "0x0000000000000000000000000000000000000000000000000000000000000001",
        "expiry": null,
        "filterExpiry": "253402194600000",
        "issuanceDate": "1633523588000",
        "issuerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "jurisdiction": null,
        "lastUpdateDate": "1633523588000",
        "scope": null,
        "targetDidId": "0xc5e2d554233da63d509ee482dbeed0ddec94dc1d0b45ebfdcdc48bd0928222b1",
        "type": "CustomerDueDiligence",
      },
      Object {
        "__typename": "Claim",
        "cddId": "0x0000000000000000000000000000000000000000000000000000000000000001",
        "expiry": null,
        "filterExpiry": "253402194600000",
        "issuanceDate": "1633523600500",
        "issuerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "jurisdiction": null,
        "lastUpdateDate": "1633523600500",
        "scope": null,
        "targetDidId": "0x70da84f285540a6174594f6fd69c7facf092cd29210f1b93ee3f4915c4c8f86c",
        "type": "CustomerDueDiligence",
      },
      Object {
        "__typename": "Claim",
        "cddId": "0x0000000000000000000000000000000000000000000000000000000000000002",
        "expiry": null,
        "filterExpiry": "253402194600000",
        "issuanceDate": "1633523601000",
        "issuerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "jurisdiction": null,
        "lastUpdateDate": "1633523601000",
        "scope": null,
        "targetDidId": "0x9e0f63e20537f9e5dddd47540266080e25177a329a1b5a0bff9c950fe7a7da1d",
        "type": "CustomerDueDiligence",
      },
      Object {
        "__typename": "Claim",
        "cddId": "0x0000000000000000000000000000000000000000000000000000000000000001",
        "expiry": null,
        "filterExpiry": "253402194600000",
        "issuanceDate": "1633523602500",
        "issuerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "jurisdiction": null,
        "lastUpdateDate": "1633523602500",
        "scope": null,
        "targetDidId": "0x7e5f745cee5e53daac1ef84b48f35fb4428bdb4d336a149c9659380ae04cfb46",
        "type": "CustomerDueDiligence",
      },
      Object {
        "__typename": "Claim",
        "cddId": "0x0000000000000000000000000000000000000000000000000000000000000002",
        "expiry": null,
        "filterExpiry": "253402194600000",
        "issuanceDate": "1633523603000",
        "issuerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "jurisdiction": null,
        "lastUpdateDate": "1633523603000",
        "scope": null,
        "targetDidId": "0xa8956503dc6eebc7db2edf4d9656e5030fcbb03d159492b2651c665d1be57b52",
        "type": "CustomerDueDiligence",
      },
      Object {
        "__typename": "Claim",
        "cddId": "0x0000000000000000000000000000000000000000000000000000000000000001",
        "expiry": null,
        "filterExpiry": "253402194600000",
        "issuanceDate": "1633523604500",
        "issuerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "jurisdiction": null,
        "lastUpdateDate": "1633523604500",
        "scope": null,
        "targetDidId": "0x69650eb2544ed57930cc0bedacdfceeee3b5905470e56edb0eb96271e0e9fef3",
        "type": "CustomerDueDiligence",
      },
      Object {
        "__typename": "Claim",
        "cddId": "0x0000000000000000000000000000000000000000000000000000000000000002",
        "expiry": null,
        "filterExpiry": "253402194600000",
        "issuanceDate": "1633523605000",
        "issuerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "jurisdiction": null,
        "lastUpdateDate": "1633523605000",
        "scope": null,
        "targetDidId": "0x56a91c10f2368b30670b7bea260928f0291387abfb75b5953cd722917423bf01",
        "type": "CustomerDueDiligence",
      },
      Object {
        "__typename": "Claim",
        "cddId": null,
        "expiry": null,
        "filterExpiry": "253402194600000",
        "issuanceDate": "1633523608500",
        "issuerId": "0x70da84f285540a6174594f6fd69c7facf092cd29210f1b93ee3f4915c4c8f86c",
        "jurisdiction": null,
        "lastUpdateDate": "1633523608500",
        "scope": Object {
          "type": "Identity",
          "value": "0x56a91c10f2368b30670b7bea260928f0291387abfb75b5953cd722917423bf01",
        },
        "targetDidId": "0x69650eb2544ed57930cc0bedacdfceeee3b5905470e56edb0eb96271e0e9fef3",
        "type": "Exempted",
      },
    ],
    "totalCount": 42,
  },
}
`;

exports[`claims should return filtered claims 1`] = `
Object {
  "claims": Object {
    "__typename": "ClaimsConnection",
    "nodes": Array [],
    "totalCount": 0,
  },
}
`;

exports[`claims should return just total count 1`] = `
Object {
  "claims": Object {
    "__typename": "ClaimsConnection",
    "totalCount": 42,
  },
}
`;

exports[`identityWithClaims should return all identities with their claims as there are no filters 1`] = `
Object {
  "identityWithClaims": Object {
    "__typename": "IdentityWithClaimsConnection",
    "nodes": Array [
      Object {
        "__typename": "IdentityWithClaim",
        "claims": Object {
          "__typename": "ClaimsConnection",
          "nodes": Array [
            Object {
              "__typename": "Claim",
              "cddId": "0x0000000000000000000000000000000000000000000000000000000000000001",
              "expiry": null,
              "filterExpiry": "253402194600000",
              "issuanceDate": "1633523618500",
              "issuerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "jurisdiction": null,
              "lastUpdateDate": "1633523618500",
              "scope": null,
              "targetDidId": "0x0096ea2b9174cbe71c1d3125850b06b2a6e6007cdb3cb33fc371f07154847135",
              "type": "CustomerDueDiligence",
            },
          ],
        },
        "id": "0x0096ea2b9174cbe71c1d3125850b06b2a6e6007cdb3cb33fc371f07154847135",
        "issuerIndex": Array [
          "0x0500000000000000000000000000000000000000000000000000000000000000",
        ],
        "maxExpiry": "253402194600000",
        "scopeIndex": Array [
          null,
        ],
        "typeIndex": Array [
          "CustomerDueDiligence",
        ],
      },
      Object {
        "__typename": "IdentityWithClaim",
        "claims": Object {
          "__typename": "ClaimsConnection",
          "nodes": Array [
            Object {
              "__typename": "Claim",
              "cddId": "0x0000000000000000000000000000000000000000000000000000000000000002",
              "expiry": null,
              "filterExpiry": "253402194600000",
              "issuanceDate": "1633523677000",
              "issuerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "jurisdiction": null,
              "lastUpdateDate": "1633523677000",
              "scope": null,
              "targetDidId": "0x0854afeca045161ef42ba9be94c973f65efc0e8532933500865a1fd655148f6c",
              "type": "CustomerDueDiligence",
            },
          ],
        },
        "id": "0x0854afeca045161ef42ba9be94c973f65efc0e8532933500865a1fd655148f6c",
        "issuerIndex": Array [
          "0x0500000000000000000000000000000000000000000000000000000000000000",
        ],
        "maxExpiry": "253402194600000",
        "scopeIndex": Array [
          null,
        ],
        "typeIndex": Array [
          "CustomerDueDiligence",
        ],
      },
      Object {
        "__typename": "IdentityWithClaim",
        "claims": Object {
          "__typename": "ClaimsConnection",
          "nodes": Array [
            Object {
              "__typename": "Claim",
              "cddId": "0x0000000000000000000000000000000000000000000000000000000000000001",
              "expiry": null,
              "filterExpiry": "253402194600000",
              "issuanceDate": "1633523570500",
              "issuerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "jurisdiction": null,
              "lastUpdateDate": "1633523570500",
              "scope": null,
              "targetDidId": "0x139dad9675f6d89bbe39d4a1ffcb824b9ff44fce366390090752a926d7c6e689",
              "type": "CustomerDueDiligence",
            },
          ],
        },
        "id": "0x139dad9675f6d89bbe39d4a1ffcb824b9ff44fce366390090752a926d7c6e689",
        "issuerIndex": Array [
          "0x0500000000000000000000000000000000000000000000000000000000000000",
        ],
        "maxExpiry": "253402194600000",
        "scopeIndex": Array [
          null,
        ],
        "typeIndex": Array [
          "CustomerDueDiligence",
        ],
      },
      Object {
        "__typename": "IdentityWithClaim",
        "claims": Object {
          "__typename": "ClaimsConnection",
          "nodes": Array [
            Object {
              "__typename": "Claim",
              "cddId": "0x0000000000000000000000000000000000000000000000000000000000000001",
              "expiry": null,
              "filterExpiry": "253402194600000",
              "issuanceDate": "1633523663000",
              "issuerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "jurisdiction": null,
              "lastUpdateDate": "1633523663000",
              "scope": null,
              "targetDidId": "0x1c18365371d85ae8662de63bfb0fb90da99b93482e8f043de61ffc83994f8858",
              "type": "CustomerDueDiligence",
            },
          ],
        },
        "id": "0x1c18365371d85ae8662de63bfb0fb90da99b93482e8f043de61ffc83994f8858",
        "issuerIndex": Array [
          "0x0500000000000000000000000000000000000000000000000000000000000000",
        ],
        "maxExpiry": "253402194600000",
        "scopeIndex": Array [
          null,
        ],
        "typeIndex": Array [
          "CustomerDueDiligence",
        ],
      },
      Object {
        "__typename": "IdentityWithClaim",
        "claims": Object {
          "__typename": "ClaimsConnection",
          "nodes": Array [
            Object {
              "__typename": "Claim",
              "cddId": "0x0000000000000000000000000000000000000000000000000000000000000001",
              "expiry": null,
              "filterExpiry": "253402194600000",
              "issuanceDate": "1633523574000",
              "issuerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "jurisdiction": null,
              "lastUpdateDate": "1633523574000",
              "scope": null,
              "targetDidId": "0x25ebc60487a6e8c621b5987d0efa148a61be92f4810690b9a7d45298145f4ae8",
              "type": "CustomerDueDiligence",
            },
          ],
        },
        "id": "0x25ebc60487a6e8c621b5987d0efa148a61be92f4810690b9a7d45298145f4ae8",
        "issuerIndex": Array [
          "0x0500000000000000000000000000000000000000000000000000000000000000",
        ],
        "maxExpiry": "253402194600000",
        "scopeIndex": Array [
          null,
        ],
        "typeIndex": Array [
          "CustomerDueDiligence",
        ],
      },
      Object {
        "__typename": "IdentityWithClaim",
        "claims": Object {
          "__typename": "ClaimsConnection",
          "nodes": Array [
            Object {
              "__typename": "Claim",
              "cddId": "0x0000000000000000000000000000000000000000000000000000000000000001",
              "expiry": null,
              "filterExpiry": "253402194600000",
              "issuanceDate": "1633523660000",
              "issuerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "jurisdiction": null,
              "lastUpdateDate": "1633523660000",
              "scope": null,
              "targetDidId": "0x2795441b98ef5a844c7675df8f6030126a297b898ec2d6029dcf81c72d59e553",
              "type": "CustomerDueDiligence",
            },
          ],
        },
        "id": "0x2795441b98ef5a844c7675df8f6030126a297b898ec2d6029dcf81c72d59e553",
        "issuerIndex": Array [
          "0x0500000000000000000000000000000000000000000000000000000000000000",
        ],
        "maxExpiry": "253402194600000",
        "scopeIndex": Array [
          null,
        ],
        "typeIndex": Array [
          "CustomerDueDiligence",
        ],
      },
      Object {
        "__typename": "IdentityWithClaim",
        "claims": Object {
          "__typename": "ClaimsConnection",
          "nodes": Array [
            Object {
              "__typename": "Claim",
              "cddId": "0x0000000000000000000000000000000000000000000000000000000000000001",
              "expiry": null,
              "filterExpiry": "253402194600000",
              "issuanceDate": "1633523662000",
              "issuerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "jurisdiction": null,
              "lastUpdateDate": "1633523662000",
              "scope": null,
              "targetDidId": "0x2fbb6ef977181d14c7714e134cd5382d42e4214aaf81a2e60b57663946b644c5",
              "type": "CustomerDueDiligence",
            },
          ],
        },
        "id": "0x2fbb6ef977181d14c7714e134cd5382d42e4214aaf81a2e60b57663946b644c5",
        "issuerIndex": Array [
          "0x0500000000000000000000000000000000000000000000000000000000000000",
        ],
        "maxExpiry": "253402194600000",
        "scopeIndex": Array [
          null,
        ],
        "typeIndex": Array [
          "CustomerDueDiligence",
        ],
      },
      Object {
        "__typename": "IdentityWithClaim",
        "claims": Object {
          "__typename": "ClaimsConnection",
          "nodes": Array [
            Object {
              "__typename": "Claim",
              "cddId": "0x0000000000000000000000000000000000000000000000000000000000000001",
              "expiry": null,
              "filterExpiry": "253402194600000",
              "issuanceDate": "1633523720500",
              "issuerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "jurisdiction": null,
              "lastUpdateDate": "1633523720500",
              "scope": null,
              "targetDidId": "0x3ece7406def5b26835178d981c4c4a33e9f1b7a79c4432bff1f381c37308ac2f",
              "type": "CustomerDueDiligence",
            },
            Object {
              "__typename": "Claim",
              "cddId": null,
              "expiry": null,
              "filterExpiry": "253402194600000",
              "issuanceDate": "1633523888000",
              "issuerId": "0x0400000000000000000000000000000000000000000000000000000000000000",
              "jurisdiction": null,
              "lastUpdateDate": "1633523888000",
              "scope": Object {
                "type": "Ticker",
                "value": "15TICKER",
              },
              "targetDidId": "0x3ece7406def5b26835178d981c4c4a33e9f1b7a79c4432bff1f381c37308ac2f",
              "type": "Accredited",
            },
          ],
        },
        "id": "0x3ece7406def5b26835178d981c4c4a33e9f1b7a79c4432bff1f381c37308ac2f",
        "issuerIndex": Array [
          "0x0500000000000000000000000000000000000000000000000000000000000000",
          "0x0400000000000000000000000000000000000000000000000000000000000000",
        ],
        "maxExpiry": "253402194600000",
        "scopeIndex": Array [
          null,
          Object {
            "type": "Ticker",
            "value": "15TICKER",
          },
        ],
        "typeIndex": Array [
          "CustomerDueDiligence",
          "Accredited",
        ],
      },
      Object {
        "__typename": "IdentityWithClaim",
        "claims": Object {
          "__typename": "ClaimsConnection",
          "nodes": Array [
            Object {
              "__typename": "Claim",
              "cddId": "0x0000000000000000000000000000000000000000000000000000000000000002",
              "expiry": null,
              "filterExpiry": "253402194600000",
              "issuanceDate": "1633523560000",
              "issuerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "jurisdiction": null,
              "lastUpdateDate": "1633523560000",
              "scope": null,
              "targetDidId": "0x406c0c0af84c690b0fd730c53f9518af7b6a11f0aa5b1e3bdf48b5bf7f695fb4",
              "type": "CustomerDueDiligence",
            },
          ],
        },
        "id": "0x406c0c0af84c690b0fd730c53f9518af7b6a11f0aa5b1e3bdf48b5bf7f695fb4",
        "issuerIndex": Array [
          "0x0500000000000000000000000000000000000000000000000000000000000000",
        ],
        "maxExpiry": "253402194600000",
        "scopeIndex": Array [
          null,
        ],
        "typeIndex": Array [
          "CustomerDueDiligence",
        ],
      },
      Object {
        "__typename": "IdentityWithClaim",
        "claims": Object {
          "__typename": "ClaimsConnection",
          "nodes": Array [
            Object {
              "__typename": "Claim",
              "cddId": "0x0000000000000000000000000000000000000000000000000000000000000001",
              "expiry": null,
              "filterExpiry": "253402194600000",
              "issuanceDate": "1633523708000",
              "issuerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "jurisdiction": null,
              "lastUpdateDate": "1633523708000",
              "scope": null,
              "targetDidId": "0x43b3e9575f1f5830fe5451bf1caa1fdee5631ef1644ece1d788250ccb7a95144",
              "type": "CustomerDueDiligence",
            },
          ],
        },
        "id": "0x43b3e9575f1f5830fe5451bf1caa1fdee5631ef1644ece1d788250ccb7a95144",
        "issuerIndex": Array [
          "0x0500000000000000000000000000000000000000000000000000000000000000",
        ],
        "maxExpiry": "253402194600000",
        "scopeIndex": Array [
          null,
        ],
        "typeIndex": Array [
          "CustomerDueDiligence",
        ],
      },
    ],
    "totalCount": 36,
  },
}
`;

exports[`identityWithClaims should return identities and claims filtered 1`] = `
Object {
  "identityWithClaims": Object {
    "__typename": "IdentityWithClaimsConnection",
    "nodes": Array [
      Object {
        "__typename": "IdentityWithClaim",
        "claims": Object {
          "__typename": "ClaimsConnection",
          "nodes": Array [
            Object {
              "__typename": "Claim",
              "cddId": "0x0000000000000000000000000000000000000000000000000000000000000001",
              "expiry": null,
              "filterExpiry": "253402194600000",
              "issuanceDate": "1633523604500",
              "issuerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "jurisdiction": null,
              "lastUpdateDate": "1633523604500",
              "scope": null,
              "targetDidId": "0x69650eb2544ed57930cc0bedacdfceeee3b5905470e56edb0eb96271e0e9fef3",
              "type": "CustomerDueDiligence",
            },
            Object {
              "__typename": "Claim",
              "cddId": null,
              "expiry": null,
              "filterExpiry": "253402194600000",
              "issuanceDate": "1633523608500",
              "issuerId": "0x70da84f285540a6174594f6fd69c7facf092cd29210f1b93ee3f4915c4c8f86c",
              "jurisdiction": null,
              "lastUpdateDate": "1633523608500",
              "scope": Object {
                "type": "Identity",
                "value": "0x56a91c10f2368b30670b7bea260928f0291387abfb75b5953cd722917423bf01",
              },
              "targetDidId": "0x69650eb2544ed57930cc0bedacdfceeee3b5905470e56edb0eb96271e0e9fef3",
              "type": "Exempted",
            },
            Object {
              "__typename": "Claim",
              "cddId": null,
              "expiry": null,
              "filterExpiry": "253402194600000",
              "issuanceDate": "1633523609000",
              "issuerId": "0x70da84f285540a6174594f6fd69c7facf092cd29210f1b93ee3f4915c4c8f86c",
              "jurisdiction": null,
              "lastUpdateDate": "1633523609000",
              "scope": Object {
                "type": "Ticker",
                "value": "5TICKER",
              },
              "targetDidId": "0x69650eb2544ed57930cc0bedacdfceeee3b5905470e56edb0eb96271e0e9fef3",
              "type": "SellLockup",
            },
            Object {
              "__typename": "Claim",
              "cddId": null,
              "expiry": null,
              "filterExpiry": "253402194600000",
              "issuanceDate": "1633523609500",
              "issuerId": "0x7e5f745cee5e53daac1ef84b48f35fb4428bdb4d336a149c9659380ae04cfb46",
              "jurisdiction": null,
              "lastUpdateDate": "1633523609500",
              "scope": Object {
                "type": "Ticker",
                "value": "5TICKER",
              },
              "targetDidId": "0x69650eb2544ed57930cc0bedacdfceeee3b5905470e56edb0eb96271e0e9fef3",
              "type": "Accredited",
            },
            Object {
              "__typename": "Claim",
              "cddId": null,
              "expiry": "1633538025928",
              "filterExpiry": "1633538025928",
              "issuanceDate": "1633523610000",
              "issuerId": "0x7e5f745cee5e53daac1ef84b48f35fb4428bdb4d336a149c9659380ae04cfb46",
              "jurisdiction": null,
              "lastUpdateDate": "1633523610000",
              "scope": Object {
                "type": "Ticker",
                "value": "5TICKER",
              },
              "targetDidId": "0x69650eb2544ed57930cc0bedacdfceeee3b5905470e56edb0eb96271e0e9fef3",
              "type": "Affiliate",
            },
          ],
        },
        "id": "0x69650eb2544ed57930cc0bedacdfceeee3b5905470e56edb0eb96271e0e9fef3",
        "issuerIndex": Array [
          "0x0500000000000000000000000000000000000000000000000000000000000000",
          "0x70da84f285540a6174594f6fd69c7facf092cd29210f1b93ee3f4915c4c8f86c",
          "0x7e5f745cee5e53daac1ef84b48f35fb4428bdb4d336a149c9659380ae04cfb46",
        ],
        "maxExpiry": "253402194600000",
        "scopeIndex": Array [
          null,
          Object {
            "type": "Identity",
            "value": "0x56a91c10f2368b30670b7bea260928f0291387abfb75b5953cd722917423bf01",
          },
          Object {
            "type": "Ticker",
            "value": "5TICKER",
          },
          Object {
            "type": "Ticker",
            "value": "5TICKER",
          },
          Object {
            "type": "Ticker",
            "value": "5TICKER",
          },
        ],
        "typeIndex": Array [
          "CustomerDueDiligence",
          "Exempted",
          "SellLockup",
          "Accredited",
          "Affiliate",
        ],
      },
    ],
    "totalCount": 1,
  },
}
`;

exports[`identityWithClaims should return just total count 1`] = `
Object {
  "identityWithClaims": Object {
    "__typename": "IdentityWithClaimsConnection",
    "totalCount": 36,
  },
}
`;

exports[`issuerIdentityWithClaims should return all issuers with their claims for given did 1`] = `
Object {
  "issuerIdentityWithClaims": Object {
    "__typename": "IssuerIdentityWithClaimsConnection",
    "nodes": Array [],
    "totalCount": 0,
  },
}
`;

exports[`issuerIdentityWithClaims should return identities and claims filtered 1`] = `
Object {
  "issuerIdentityWithClaims": Object {
    "__typename": "IssuerIdentityWithClaimsConnection",
    "nodes": Array [
      Object {
        "__typename": "IssuerIdentityWithClaim",
        "claims": Object {
          "__typename": "ClaimsConnection",
          "nodes": Array [
            Object {
              "__typename": "Claim",
              "cddId": null,
              "expiry": null,
              "filterExpiry": "253402194600000",
              "issuanceDate": "1633523608500",
              "issuerId": "0x70da84f285540a6174594f6fd69c7facf092cd29210f1b93ee3f4915c4c8f86c",
              "jurisdiction": null,
              "lastUpdateDate": "1633523608500",
              "scope": Object {
                "type": "Identity",
                "value": "0x56a91c10f2368b30670b7bea260928f0291387abfb75b5953cd722917423bf01",
              },
              "targetDidId": "0x69650eb2544ed57930cc0bedacdfceeee3b5905470e56edb0eb96271e0e9fef3",
              "type": "Exempted",
            },
            Object {
              "__typename": "Claim",
              "cddId": null,
              "expiry": null,
              "filterExpiry": "253402194600000",
              "issuanceDate": "1633523609000",
              "issuerId": "0x70da84f285540a6174594f6fd69c7facf092cd29210f1b93ee3f4915c4c8f86c",
              "jurisdiction": null,
              "lastUpdateDate": "1633523609000",
              "scope": Object {
                "type": "Ticker",
                "value": "5TICKER",
              },
              "targetDidId": "0x69650eb2544ed57930cc0bedacdfceeee3b5905470e56edb0eb96271e0e9fef3",
              "type": "SellLockup",
            },
          ],
        },
        "id": "0x70da84f285540a6174594f6fd69c7facf092cd29210f1b93ee3f4915c4c8f86c",
        "maxExpiry": "253402194600000",
        "scopeIndex": Array [
          Object {
            "type": "Identity",
            "value": "0x56a91c10f2368b30670b7bea260928f0291387abfb75b5953cd722917423bf01",
          },
          Object {
            "type": "Ticker",
            "value": "5TICKER",
          },
        ],
        "targetIndex": Array [
          "0x69650eb2544ed57930cc0bedacdfceeee3b5905470e56edb0eb96271e0e9fef3",
        ],
        "typeIndex": Array [
          "Exempted",
          "SellLockup",
        ],
      },
    ],
    "totalCount": 1,
  },
}
`;
